--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,7 +14,8 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "axios": "^1.7.8",
-    "next": "13.4.12",
+    "debug": "^4.3.7",
+    "next": "^13.5.7",
     "node-cache": "^5.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
