--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "jest"
-  },
+    "start": "ts-node server.ts",
+    "dev": "nodemon server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
